--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,23 @@
 h1 {
+    padding-top: 100px;
+    text-align: center;
+    margin: auto;
     font-family: 'Spartan', sans-serif;
 }
 
 p {
+    max-width: 500px;
+    margin: auto;
+    margin-top: 30px;
     font-family: 'Big-Shoulders', sans-serif;
 }
 
 li {
-    font-family: 'Big-Shoulders', sans-serif;
+  font-family: 'Big Shoulders Text', cursive;
+font-size: 30px;
     list-style: none;
 }
+
 
 a {
     font-family: 'Spartan', sans-serif;
@@ -18,6 +26,46 @@ a {
     font-weight: bolder;
 }
 
+a#home {
+    margin-left: 5vw;
+    position: fixed;
+}
+
+div.navbar {
+   
+    margin: auto;
+    text-align: center;
+
+
+
+}
+
+a.stoogelink1,
+a.stoogelink2,
+a.stoogelink3 {
+    margin-right: 3vw;
+    font-size: 35px;
+
+}
+
+div.main {
+    background-image: url(https://assetsds.cdnedge.bluemix.net/sites/default/files/styles/very_big_1/public/feature/images/the_three_stooges.jpg?itok=j94Y8ih0);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    margin: auto;
+    height: 400px;
+ 
+position:relative;
+    
+
+
+}
+
+.quickfacts {
+    min-width: 250px;
+    max-width: 400px;
+}
 
 div#larryfine {
     background-size: contain;
@@ -33,6 +81,16 @@ div#larryfine {
 div#moehoward {
     background-size: contain;
     background-image: url(https://d9nvuahg4xykp.cloudfront.net/7966399834371162102/-7705350022109686745.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 80vh;
+    width: auto;
+    /*background-size: contain;*/
+}
+
+div#curlyhoward {
+    background-size: contain;
+    background-image: url(https://www.gstatic.com/tv/thumb/persons/189024/189024_v9_ba.jpg);
     background-repeat: no-repeat;
     background-position: center;
     height: 80vh;
