--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 h1 {
     padding-top: 100px;
     text-align: center;
@@ -13,8 +17,8 @@ p {
 }
 
 li {
-  font-family: 'Big Shoulders Text', cursive;
-font-size: 30px;
+    font-family: 'Big Shoulders Text', cursive;
+    font-size: 30px;
     list-style: none;
 }
 
@@ -32,22 +36,20 @@ a#home {
 }
 
 div.navbar {
-   
+
     margin: auto;
     text-align: center;
-
-
-
 }
-#moe{
-    width:50vw;
-    margin:auto;
+
+#moe, #larry, #curly {
+    width: 50vw;
+    margin: auto;
 }
 
 a.stoogelink1,
 a.stoogelink2,
 a.stoogelink3 {
-    margin-right: 3vw;
+    margin-right: 2vw;
     font-size: 35px;
 
 }
@@ -59,9 +61,9 @@ div.main {
     background-size: contain;
     margin: auto;
     height: 400px;
- 
-position:relative;
-    
+
+    position: relative;
+
 
 
 }
